samples/_failures_safe/1761246649_bdcdda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d37e0ca3.c:155: error: expected ‘;’, ‘,’ or ‘)’ at end of input
